--- a/data/pts04Therm.yaml
+++ b/data/pts04Therm.yaml
@@ -9,9 +9,9 @@
 # test: ./coco/test-dev2017.txt  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
 
 
-train: D:\videos\DL\Training\2025\Vis20251105_pts04\trainsubset.txt
-val: D:\videos\DL\Training\2025\Vis20251105_pts04\valsubset.txt
-test: D:\videos\DL\Training\2025\Vis20251105_pts04\testsubset.txt
+train: /dldata/Videos/DL/Training/2025/Therm20251104/trainSubset.txt
+val: /dldata/Videos/DL/Training/2025/Therm20251104/valSubset.txt
+test: /dldata/Videos/DL/Training/2025/Therm20251104/testSubset.txt
 
 
 # train: ./data/Vis20240402_pts03/trainsubsetlocaldrive.txt
